--- a/src/main/resources/templates/shenbaozhicheng.html
+++ b/src/main/resources/templates/shenbaozhicheng.html
@@ -56,7 +56,7 @@
                   <li  ><a th:href="@{'/PersonalDeclare/Main'}">申报职称</a></li>
                   <li class="active"><a th:href="@{'/PersonalDeclare/Declare'}">职称评审</a></li>
                   <li  ><a th:href="@{'/PersonalJudge/Judge'}">职称认定</a></li>
-                  <li><a href="#">帮助中心</a></li>
+                  <li><a>帮助中心</a></li>
               </ul>
           </div>
       </nav>
