--- a/src/main/resources/templates/ReviewCodeManage.html
+++ b/src/main/resources/templates/ReviewCodeManage.html
@@ -158,7 +158,7 @@
                                             <a class="nav-link" href="#" >单位信息</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">工作账号</a>
+                                            <a class="nav-link" th:href="@{'/corporation/ManageUser'}">工作账号</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#">分公司信息</a>
@@ -181,7 +181,7 @@
                                 <div id="submenu-2" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item ">
-                                            <a class="nav-link" href="#" >查阅授权码</a>
+                                            <a class="nav-link" th:href="@{'/review/toReviewCodePage'}" >查阅授权码</a>
                                         </li>
                                        
                                     </ul>
